Ignore FIrebase Folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 [Ll]ogs/
 [Uu]serSettings/
 [Mm]emoryCaptures/
+**/[Aa]ssets/FireBase/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
